# morphoeval

./: .gitignore  LICENSE  README.md  setup.cfg
src/morphoeval/: __init__.py  __main__.py  boundary.py  common.py  cooccurrence.py
src/morphometrics/: __init__.py  __main__.py  cooccurrence.py
tests/: test_common.py  test_morphoeval.py  test_morphometrics.py
