[metadata]
name = morphometrics
version = 0.0.1
author = Sami Virpioja
author_email = sami.virpioja@helsinki.fi
description = Metrics for morphological analysis and segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/svirpioj/morphometrics
project_urls =
    Bug Tracker = https://github.com/svirpioj/morphometrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pytest
    ruamel.yaml
    scipy
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    morphometrics = morphometrics.__main__:main

[flake8]
max-line-length = 127
