[metadata]
name = morphoeval
author = Sami Virpioja
author_email = sami.virpioja@helsinki.fi
description = Evaluation for morphological analysis and segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/svirpioj/morphoeval
project_urls =
    Bug Tracker = https://github.com/svirpioj/morphoeval/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pytest
    ruamel.yaml
    scipy
    tqdm
    munkres

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    morphoeval = morphoeval.__main__:main

[flake8]
max-line-length = 127
